# laplace-minimax-c

./: CMakeLists.txt  main.cpp  minimax.cpp  minimax.hpp  minimax_maehly.cpp  minimax_paraopt.cpp  minimax_read.cpp  quadmath.hpp
src/: minimax_read.cpp  quadmath.hpp
